--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,10 @@
   <br/>
   <br/>
   <br/>
+  <div class="container"> 
+  <button type="button" class="btn btn-brimary"  (click)="onAddButton()"> Add Friends</button>
+  </div>
+  <br/>
   <div class="container">   
     <table class="table table-hover table-bordered">
       <thead>
@@ -17,11 +21,11 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let each of details; let i=index">
+        <tr *ngFor="let each of details; let i=index" (click)="onRowClick(i)">
           <td>{{i+1}}</td>
           <td>{{each.name}}</td>
           <td>{{each.age}}</td>
-          <td>{{each.about}}</td>
+          <td>Currently working at {{each.about}}</td>
         </tr>
       </tbody>
     </table>
@@ -32,6 +36,7 @@
   <div class="container">
     <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
+        <input type="hidden" id="id" formControlName="id" class="form-control">
         <label for="name">Name</label>
         <input type="text" id="name" formControlName="name" class="form-control">
         <label for="age">Age</label>
@@ -39,9 +44,13 @@
         <label for="about">Work</label>
         <input type="text" id="about" formControlName="about" class="form-control">
         <br/>
-        <button type="submit" class="btn btn-success">Add</button>
+        <button type="submit" class="btn btn-success">
+          <div *ngIf="addButton">Add</div>
+          <div *ngIf="!addButton">Update</div>
+        </button>
       </div>
     </form>      
   </div>    
+
 
 </div>
